[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Screens/Pause.gd" type="Script" id=1]
[ext_resource path="res://Font/DynamicFonts/Kenney Pixel_50.tres" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Daark_Screen" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.5
margin_top = -166.0
margin_right = 266.5
margin_bottom = 166.0
color = Color( 0, 0, 0, 0.33 )

[node name="Pause_Label" type="Label" parent="Daark_Screen"]
margin_right = 40.0
margin_bottom = 14.0

[node name="CenterContainer" type="CenterContainer" parent="Daark_Screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.5
margin_top = -57.0
margin_right = 266.5
margin_bottom = 57.0

[node name="Rows" type="VBoxContainer" parent="Daark_Screen/CenterContainer"]
margin_left = 198.0
margin_right = 335.0
margin_bottom = 161.0

[node name="Menu" type="Button" parent="Daark_Screen/CenterContainer/Rows"]
margin_right = 137.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Menu"

[node name="Restart" type="Button" parent="Daark_Screen/CenterContainer/Rows"]
margin_top = 49.0
margin_right = 137.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="Quit" type="Button" parent="Daark_Screen/CenterContainer/Rows"]
margin_top = 98.0
margin_right = 137.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Press_P" type="Label" parent="Daark_Screen/CenterContainer/Rows"]
margin_top = 147.0
margin_right = 137.0
margin_bottom = 161.0
text = "Press (P) to Unpause"

[connection signal="pressed" from="Daark_Screen/CenterContainer/Rows/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Daark_Screen/CenterContainer/Rows/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Daark_Screen/CenterContainer/Rows/Quit" to="." method="_on_Quit_pressed"]
